--- a/source/stylesheets/all.scss
+++ b/source/stylesheets/all.scss
@@ -46,7 +46,7 @@
 @import "refills/image-gradient-dynamic";
 @import "refills/label-alerts";
 @import "refills/modal";
-// @import "refills/pagination";
+@import "refills/pagination";
 // @import "refills/parallax";
 // @import "refills/progress-bar";
 // @import "refills/progress-bar-indication";
