--- a/source/stylesheets/all.scss
+++ b/source/stylesheets/all.scss
@@ -47,7 +47,7 @@
 @import "refills/label-alerts";
 @import "refills/modal";
 @import "refills/pagination";
-// @import "refills/parallax";
+@import "refills/parallax";
 // @import "refills/progress-bar";
 // @import "refills/progress-bar-indication";
 // @import "refills/search-bar";
