--- a/source/stylesheets/all.scss
+++ b/source/stylesheets/all.scss
@@ -48,7 +48,7 @@
 @import "refills/modal";
 @import "refills/pagination";
 @import "refills/parallax";
-// @import "refills/progress-bar";
+@import "refills/progress-bar";
 // @import "refills/progress-bar-indication";
 // @import "refills/search-bar";
 // @import "refills/sliding-menu";
