Progress indication: Decoupled

--- a/source/stylesheets/all.scss
+++ b/source/stylesheets/all.scss
@@ -49,7 +49,7 @@
 @import "refills/pagination";
 @import "refills/parallax";
 @import "refills/progress-bar";
-// @import "refills/progress-bar-indication";
+@import "refills/progress-bar-indication";
 // @import "refills/search-bar";
 // @import "refills/sliding-menu";
 // @import "refills/switch";
