--- a/source/stylesheets/refills/_progress-bar-indication.scss
+++ b/source/stylesheets/refills/_progress-bar-indication.scss
@@ -1,4 +1,18 @@
-.progress-bar-indication {
+.progress-bar-indication {  
+  // if you are using Bitters you can remove everything down to the commented line
+  $base-border-color: gainsboro;
+  $base-border-radius: 3px;
+  $base-background-color: white;
+  $base-line-height: 1.5em;
+  $base-accent-color: #477DCA;
+  -webkit-font-smoothing: antialiased;
+
+  p {
+    line-height: $base-line-height;
+  }
+
+  //////////////////////////////////////////////
+
   $progress-border-color: $base-border-color;
   $progress-border: 1px solid $progress-border-color;
   $progress-meter-border-color: $base-accent-color;
@@ -30,7 +44,7 @@
   }
 
   p {
-    margin-bottom: 0;
+    margin: 0;
     padding: .1em .5em;
     font-weight: 800;
     color: $progress-color;    
