Search bar: Decoupled

--- a/source/stylesheets/all.scss
+++ b/source/stylesheets/all.scss
@@ -50,7 +50,7 @@
 @import "refills/parallax";
 @import "refills/progress-bar";
 @import "refills/progress-bar-indication";
-// @import "refills/search-bar";
+@import "refills/search-bar";
 // @import "refills/sliding-menu";
 // @import "refills/switch";
 // @import "refills/texture-legend";
