--- a/source/stylesheets/all.scss
+++ b/source/stylesheets/all.scss
@@ -51,12 +51,12 @@
 @import "refills/progress-bar";
 @import "refills/progress-bar-indication";
 @import "refills/search-bar";
-// @import "refills/sliding-menu";
+@import "refills/sliding-menu";
 // @import "refills/switch";
 // @import "refills/texture-legend";
 // @import "refills/textures";
 // @import "refills/tooltip";
-// @import "refills/video";
+@import "refills/video";
 
 // @import "refills/type-system-geometric";
 // @import "refills/type-system-rounded";
