--- a/source/stylesheets/all.scss
+++ b/source/stylesheets/all.scss
@@ -52,7 +52,7 @@
 @import "refills/progress-bar-indication";
 @import "refills/search-bar";
 @import "refills/sliding-menu";
-// @import "refills/switch";
+@import "refills/switch";
 // @import "refills/texture-legend";
 // @import "refills/textures";
 // @import "refills/tooltip";
