--- a/source/stylesheets/all.scss
+++ b/source/stylesheets/all.scss
@@ -53,8 +53,8 @@
 @import "refills/search-bar";
 @import "refills/sliding-menu";
 @import "refills/switch";
-// @import "refills/texture-legend";
-// @import "refills/textures";
+@import "refills/texture-legend";
+@import "refills/textures";
 // @import "refills/tooltip";
 @import "refills/video";
 
