--- a/source/stylesheets/refills/_texture-legend.scss
+++ b/source/stylesheets/refills/_texture-legend.scss
@@ -99,7 +99,7 @@
 
 .texture-examples {
   @include clearfix;
-  border-radius: $base-border-radius * 2;
+  border-radius: 6px;
   border: 1px solid silver;
   margin-bottom: 3em;
   padding: 1em;
@@ -117,8 +117,10 @@
   }
 
   h4 {
+    -webkit-font-smoothing: antialiased;
     color: gray;
     font-size: .8em;
+    margin: 0;
     font-weight: 200;
     line-height: 2.2em;
     padding-left: .5em;
@@ -137,8 +139,10 @@
   }
 
   p {
+    -webkit-font-smoothing: antialiased;
     color: #909090;
     font-size: .9em;
+    line-height: 1.5em;
     margin: 1em auto 1em auto;
     max-width: 74%;
   }
@@ -150,16 +154,16 @@
 }
 
 .example-normal {
-  border-bottom-left-radius: $base-border-radius * 2;
-  border-top-left-radius: $base-border-radius * 2;
+  border-bottom-left-radius: 6px;
+  border-top-left-radius: 6px;
   float: left;
   height: 100%;
   width: 50%;
 }
 
 .example-inverted {
-  border-bottom-right-radius: $base-border-radius * 2;
-  border-top-right-radius: $base-border-radius * 2;
+  border-bottom-right-radius: 6px;
+  border-top-right-radius: 6px;
   float: left;
   height: 100%;
   width: 50%;
