--- a/source/stylesheets/all.scss
+++ b/source/stylesheets/all.scss
@@ -55,7 +55,7 @@
 @import "refills/switch";
 @import "refills/texture-legend";
 @import "refills/textures";
-// @import "refills/tooltip";
+@import "refills/tooltip";
 @import "refills/video";
 
 // @import "refills/type-system-geometric";
