Type systems: Decoupled

--- a/source/stylesheets/all.scss
+++ b/source/stylesheets/all.scss
@@ -58,9 +58,9 @@
 @import "refills/tooltip";
 @import "refills/video";
 
-// @import "refills/type-system-geometric";
-// @import "refills/type-system-rounded";
-// @import "refills/type-system-sans";
-// @import "refills/type-system-serif";
-// @import "refills/type-system-slab";
-// @import "refills/type-system-traditional";
+@import "refills/type-system-geometric";
+@import "refills/type-system-rounded";
+@import "refills/type-system-sans";
+@import "refills/type-system-serif";
+@import "refills/type-system-slab";
+@import "refills/type-system-traditional";
